packages/core/src/components/atoms/button/button.component.scss
p-button {
    @apply flex h-10 w-auto text-base;

    button,
    a {
        outline: 0;
        border: 0;
        @apply h-full w-full rounded-large;
        @apply font-semibold leading-4;
        @apply flex items-center justify-center;
        @apply cursor-pointer;

        will-change: filter;

        > p-loader {
            @apply ml-2;
        }

        // Icon positions
        &.icon-position-end {
            > p-icon:not(.chevron) {
                @apply ml-2;
            }
        }

        &.icon-position-start {
            > p-icon:not(.chevron) {
                @apply mr-2;
            }
        }

        // Variants
        &.variant-primary,
        &.variant-secondary {
            @apply px-4 filter;
        }

        &.variant-primary,
        &.variant-secondary {
            &:active,
            &.active {
                @apply drop-shadow-transparent;
            }
        }

        &.variant-primary {
            @apply bg-indigo text-white;

            &:active,
            &.active {
                &:not([disabled]) {
                    @apply bg-indigo-dark;
                }
            }

            @media (pointer: fine) {
                &:hover:not([disabled]) {
                    @apply drop-shadow-button-primary-hover;
                }
            }
        }

        &.variant-secondary {
            @apply border border-solid border-mystic-dark #{!important};
            @apply bg-white text-storm;

            &:active,
            &.active {
                &:not([disabled]) {
                    @apply bg-mystic;
                }
            }

            @media (pointer: fine) {
                &:hover:not([disabled]) {
                    @apply drop-shadow-button-secondary-hover;
                }
            }
        }

        &.variant-text {
            @apply text-indigo;

            &:hover:not([disabled]) {
                @apply text-indigo-dark;
            }
        }

        &[disabled] {
            @apply opacity-40;
        }

        // chevron
        &.has-chevron {
            &.chevron-position-start {
                @apply pl-2;

                > p-icon.chevron {
                    @apply mr-2;
                }
            }

            &.chevron-position-end {
                @apply pr-2;

                > p-icon.chevron {
                    @apply ml-2;
                }
            }

            &.variant-secondary:hover:not([disabled]) p-icon:last-child {
                @apply text-indigo;
            }
        }

        &.should-inherit-text {
            color: inherit #{!important};
            font-size: inherit #{!important};
            font-weight: inherit #{!important};
        }
    }

    &.has-icon-only {
        @apply w-10;

        a,
        button {
            @apply p-0;

            > p-icon:first-child {
                @apply mx-0;
            }
        }
    }

    // sizes
    &.size-small {
        @apply h-8;

        button,
        a {
            @apply text-sm;

            > p-icon:first-child {
                @apply text-base;
            }
        }

        &.has-icon-only {
            @apply w-8;
        }
    }
}

